--- a/src/main/resources/templates/video/addVideo.html
+++ b/src/main/resources/templates/video/addVideo.html
@@ -17,7 +17,7 @@
                 <i class="fa fa-circle"></i>
             </li>
             <li>
-                <span>添加视频</span>
+                <span>视频添加</span>
             </li>
         </ul>
     </div>
@@ -30,7 +30,7 @@
                 <div class="portlet box green-jungle">
                     <div class="portlet-title">
                         <div class="caption">
-                            <i class="icon-plus"></i>添加视频
+                            <i class="icon-plus"></i>视频添加
                         </div>
                     </div>
 
