--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -47,7 +47,7 @@
                 <!-- 视频管理 start -->
                 <li class="nav-item ">
                     <a href="javascript:;" class="nav-link nav-toggle">
-                        <i class="icon-user"></i>
+                        <i class="icon-film"></i>
                         <span class="title">视频信息</span>
                         <span class="arrow"></span>
                     </a>
